finished mark as read / unread logic change button text depending on boolean state on buttons inside bookDiv creation (remove & mark buttons) set fixed with to read / unread button to avoid size shifting when toggling more optimised less redundancy on script.js linke 81-105

--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ body {
 }
 
 .editBookBtn {
+  width: 120px; /* prevent shifting when toggling read and unread*/
   padding: 5px;
   border: solid 2px #ffe5d4;
   border-radius: 10px;
